syntax="proto3";
package appAccessRecord;

import "google/protobuf/timestamp.proto";

option go_package = "./AppAccessRecordPb";

message AppAccessRecord {
	uint32 appId = 1;
	string appName = 2;
	string userName = 3;
	uint64 bytesRx = 4;
	uint64 bytesTx = 5;
	google.protobuf.Timestamp lastModified = 6;
}
